# deep-learning-arithmetics-tutorial

./: LICENSE  README.md
cpp/: .gitignore  .gitigonre  installing_opencv_ubuntu_20.04.md
cpp/applying_sobel/: CMakeLists.txt  README.md
cpp/applying_sobel/src/: main.cpp
cpp/convolution_2d/: CMakeLists.txt  README.md  convolution_test.py
cpp/convolution_2d/src/: convolution_2d_example.cpp  same_padding_example.cpp
cpp/eigen_premier/: CMakeLists.txt  README.md  main.cpp
cpp/eigen_premier/include/: matrix_definitions.hpp
cpp/eigen_premier/libs/eigen/: install.txt
cpp/eigen_premier/src/: main.cpp
cpp/eigen_tensor_api/: CMakeLists.txt  README.md
cpp/eigen_tensor_api/libs/eigen/: install.txt
cpp/eigen_tensor_api/src/: softmax_tensor.cpp  using_tensors.cpp
cpp/lambdas/: CMakeLists.txt  README.md
cpp/lambdas/src/: main.cpp
cpp/mse/: CMakeLists.txt  mse_test.py
cpp/mse/libs/eigen/: CMakeLists.txt.in
cpp/mse/src/: main.cpp  mse_experiment.cpp
cpp/numeric_functional_algorithms/: CMakeLists.txt  README.md
cpp/numeric_functional_algorithms/src/: using_algorithms.cpp  using_functional.cpp  using_numeric.cpp
cpp/playing_with_activation_functions/: CMakeLists.txt  README.md
cpp/playing_with_activation_functions/include/: activation_functions.hpp
cpp/playing_with_activation_functions/src/: activation_examples.cpp
cpp/training_sobel/: CMakeLists.txt  README.md  grad_test.cpp  grad_test.py
cpp/training_sobel/include/: deep_learning_tutorial.hpp  image_io_tutorial.hpp
cpp/training_sobel/src/: main.cpp
temp/: plotting_activation_functions.xlsx  plotting_mse.xlsx
